--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^3.1.1",
     "eslint-config-xo": "^0.17.0",
     "eslint-config-xo-space": "^0.15.0",
+    "express": "^4.14.0",
     "gulp": "^3.9.0",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^3.0.1",
@@ -42,5 +43,8 @@
     "prepublish": "gulp prepublish",
     "test": "gulp"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "supertest": "^2.0.1"
+  }
 }
