--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "vig"
   ],
   "devDependencies": {
+    "cookie-parser": "^1.4.3",
     "eslint": "^3.1.1",
     "eslint-config-xo": "^0.17.0",
     "eslint-config-xo-space": "^0.15.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "gulp": "^3.9.0",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^3.0.1",
@@ -30,7 +32,8 @@
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^3.0.1",
     "gulp-nsp": "^2.1.0",
-    "gulp-plumber": "^1.0.0"
+    "gulp-plumber": "^1.0.0",
+    "supertest": "^2.0.1"
   },
   "eslintConfig": {
     "extends": "xo-space",
@@ -45,7 +48,6 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "chalk": "^1.1.3",
-    "supertest": "^2.0.1"
+    "chalk": "^1.1.3"
   }
 }
