--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   ],
   "devDependencies": {
     "cookie-parser": "^1.4.3",
+    "errorable": "^0.4.0",
+    "errorable-common": "^0.1.0",
     "eslint": "^3.1.1",
     "eslint-config-xo": "^0.17.0",
     "eslint-config-xo-space": "^0.15.0",
@@ -48,6 +50,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "errorable-express": "^0.0.4",
+    "node-form-validator": "^1.1.0"
   }
 }
