--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-mocha": "^3.0.1",
     "gulp-nsp": "^2.1.0",
     "gulp-plumber": "^1.0.0",
+    "sails-memory": "^0.10.7",
     "supertest": "^2.0.1"
   },
   "eslintConfig": {
@@ -52,6 +53,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "errorable-express": "^0.0.4",
-    "node-form-validator": "^1.1.0"
+    "node-form-validator": "^1.1.0",
+    "waterline": "^0.11.6"
   }
 }
