--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "errorable-express": "^0.0.4",
     "node-form-validator": "^1.1.0",
-    "waterline": "^0.11.6",
-    "skipper": "^0.7.0"
+    "skipper": "^0.7.0",
+    "waterline": "^0.11.6"
   }
 }
