--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chalk": "^1.1.3",
     "errorable-express": "^0.0.4",
     "node-form-validator": "^1.1.0",
+    "path-to-regexp": "^1.7.0",
     "skipper": "^0.7.0",
     "waterline": "^0.11.6"
   }
