--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vig",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "a new web framework, inspired by sailsjs",
   "homepage": "",
   "author": {
@@ -51,9 +51,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "async": "^2.1.2",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "errorable-express": "^0.0.4",
+    "file-cloud-uploader": "0.0.5",
     "lodash": "^4.17.2",
     "node-form-validator": "^1.1.0",
     "path-to-regexp": "^0.1.7",
