--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "files": [
     "lib"
   ],
-  "main": "lib/index.js",
+  "main": "lib/index",
+  "typings": "lib/index",
   "keywords": [
     "nodejs",
     "express",
     "vig"
   ],
   "devDependencies": {
+    "@types/node": "^7.0.8",
     "cookie-parser": "^1.4.3",
     "errorable": "^0.4.0",
     "errorable-common": "^0.1.0",
@@ -26,7 +28,7 @@
     "eslint-config-xo-space": "^0.15.0",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
@@ -35,8 +37,12 @@
     "gulp-mocha": "^3.0.1",
     "gulp-nsp": "^2.1.0",
     "gulp-plumber": "^1.0.0",
+    "gulp-tslint": "^7.1.0",
+    "gulp-typescript": "^3.1.6",
     "sails-memory": "^0.10.7",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1"
   },
   "eslintConfig": {
     "extends": "xo-space",
