--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "gulp-plumber": "^1.0.0",
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^3.1.6",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
     "sails-memory": "^0.10.7",
     "supertest": "^2.0.1",
+    "ts-node": "^2.1.0",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1"
   },
