enabled basic loading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "module": "commonjs",
     "allowJs": true,
     "outDir": "./lib",
-    "target": "es5",
-    "noImplicitAny": true
+    "target": "es5"
+    // "noImplicitAny": true
   },
   "include": [
     "./src/**/*"
