--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": ""
   },
   "files": [
-    "lib"
+    "lib",
+    "dest/src"
   ],
   "main": "lib/index",
   "typings": "lib/index",
@@ -56,7 +57,7 @@
   "repository": "calidion/vig",
   "scripts": {
     "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "test": "gulp ts && gulp"
   },
   "license": "Apache-2.0",
   "dependencies": {
