--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vig",
-  "version": "0.8.0-alpha-1",
+  "version": "0.8.0-alpha-2",
   "description": "a new web framework, inspired by sailsjs",
   "homepage": "",
   "author": {
@@ -56,7 +56,7 @@
   "repository": "calidion/vig",
   "scripts": {
     "prepublish": "gulp prepublish",
-    "test": "gulp ts && gulp"
+    "test": "gulp"
   },
   "license": "Apache-2.0",
   "dependencies": {
