--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^7.0.8",
     "cookie-parser": "^1.4.3",
+    "del": "^2.2.2",
     "errorable": "^0.4.0",
     "errorable-common": "^0.1.0",
     "eslint": "^3.1.1",
