--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vig",
-  "version": "0.8.0-alpha-3",
+  "version": "0.8.0-alpha-4",
   "description": "a new web framework, inspired by sailsjs",
   "homepage": "",
   "author": {
@@ -64,7 +64,7 @@
     "async": "^2.1.2",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
-    "errorable-express": "^0.0.4",
+    "errorable-express": "0.0.4",
     "file-cloud-uploader": "0.0.5",
     "lodash": "^4.17.2",
     "node-form-validator": "^1.3.0",
