--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vig",
-  "version": "0.8.0-alpha-6",
+  "version": "0.8.0-alpha.7",
   "description": "a new web framework, inspired by sailsjs",
   "homepage": "",
   "author": {
