--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && nyc --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
-    "coverage": "nyc --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register",
+    "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
+    "async": "^2.3.0",
+    "body-parser": "^1.17.1",
     "errorable": "^0.4.0",
     "errorable-express": "0.0.4",
     "file-cloud-uploader": "0.0.5",
@@ -42,6 +44,7 @@
     "@types/mocha": "^2.0.0",
     "@types/node": "^7.0.0",
     "chai": "^3.0.0",
+    "codecov": "^2.1.0",
     "coveralls": "^2.0.0",
     "errorable-common": "^0.1.0",
     "express": "^4.15.2",
@@ -60,7 +63,7 @@
   },
   "nyc": {
     "include": [
-      "src/*.ts"
+      "src/**/*.ts"
     ],
     "exclude": [
       "lib"
